apps/wordpress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: apps
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
...
