apps/wordpress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: apps
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: false  # force SSL redirect (only port 443)
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # uncomment to force SSL redirect with custom port
      # if ($scheme = http) { return 308 https://$host:8443$request_uri; }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wordpress.127.0.0.1.nip.io
  rules:
    - host: wordpress.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 8080
...
